# edge-computing

./: .gitignore  .gitmodules  Makefile  README.md  design-document.markdown  dev-document.md
docs/: Edge computing ‐ AI processing BB – Design document.md  README.md  design-document.md  index.html
docs/diagrams/: edge-computing-bb-class-diag.puml  edge-computing-bb-seq-diag.puml
kubernetes/deployment/bme/: Makefile  bme-setup-config.sh  config.sh  deploy.sh  k3d-bme-cluster.yaml  ptx-pdc-daemon.yaml  setup.sh  setup_k3d_env.sh
kubernetes/deployment/training/: Makefile  README.md
kubernetes/design/: Kubernetes_ref_architecture.drawio  README.md  dev-document.md
kubernetes/design/scheduler/: input_topology.gml  output.txt  scheduler_formats.py  sheduler_formats.py.txt
kubernetes/src/: Makefile
kubernetes/src/assets/: k3d-dev-cluster.yaml  ptx-builder-pod.yaml  ptx-builder-setup.yaml  ptx-controller-pod.yaml  ptx-pdc-daemon.yaml  ptx-pdc-daemon_cluster.yaml  ptx-pdc-daemon_headless.yaml  ptx-pdc-ingess.yaml  ptx-pdc-pod.yaml  ptx-pdc-setup.yaml  ptx-rest-api-pod.yaml  ptx-samples-convnet-job.yaml  ptx-samples-gbc-job.yaml  ptx-sandbox-setup.yaml  ptx-scheduler-pod.yaml  ptx-test-worker-img.yaml  ptx-test-worker-job.yaml  ptx-test-worker-pod.yaml  ptx-test-worker-secret.yaml  ptx-worker-setup.yaml
kubernetes/src/builder/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  builder.py  install-dep.sh  pyproject.toml  requirements-dev.txt  requirements.txt  test.Dockerfile  tox.ini
kubernetes/src/builder/app/: __init__.py  __main__.py  builder.py  config.toml  connector.py  datasource.py  worker.py
kubernetes/src/builder/app/ptx/: connector.py
kubernetes/src/builder/app/tools/: pdc-init.py
kubernetes/src/builder/app/util/: __init__.py  config.py  dummy.py  helper.py  k8s.py  logger.py  parsers.py  skopeo.py  types.py  webhook.py
kubernetes/src/builder/tests/: test_builder_cfg.py  test_builder_datasource.py
kubernetes/src/controller/: Dockerfile  Makefile  requirements-dev.txt  requirements.txt  requirements_dev.txt
kubernetes/src/operator/: Dockerfile  Makefile  requirements.txt
kubernetes/src/ptx/: Makefile  validate-pdc-sandbox.sh  validate-sandbox.sh
kubernetes/src/registry/: Dockerfile  Makefile
kubernetes/src/rest-api/: .dockerignore  Dockerfile  Makefile  README.md  openapi3_0.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  test.Dockerfile  tox.ini
kubernetes/src/rest-api/.old/: customer_api.py  main.py  ptx-edge.yaml  requirements.txt
kubernetes/src/rest-api/app/: __init__.py  main.py
kubernetes/src/rest-api/app/config/: __init__.py
kubernetes/src/rest-api/app/model/: __init__.py  version.py  versions.py
kubernetes/src/rest-api/scripts/: generate_openapi.py  pre-commit
kubernetes/src/rest-api/spec/: openapi.yaml
kubernetes/src/rest-api/tests/: test_ptx_edge_health.py  test_ptx_edge_versions.py
kubernetes/src/samples/: Makefile
kubernetes/src/scheduler/: Dockerfile  (+2 more)
kubernetes/test/: Makefile  README.md  cfg_dual_workers_infra.yaml  create_test_cluster.sh  setup_k3d_test_env.sh  setup_kind_test_env.sh  setup_test_env.sh
kubernetes/test/mock-api/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  install-dep.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test-requirements.txt  test.Dockerfile  tox.ini
kubernetes/test/mock-api/app/: __init__.py  __main__.py  main.py  models.py
kubernetes/test/mock-api/client/: README.md  setup.py
kubernetes/test/mock-api/client/docs/: AccessToken.md  ConsentID.md  ContractID.md  CustomerAPIApi.md  DataID.md  ExecutionMetrics.md  ExecutionRequestBody.md  ExecutionResult.md  FunctionID.md  OperationID.md  PrivateExecutionRequestBody.md  PrivateExecutionResult.md
kubernetes/test/mock-api/client/swagger_client/: __init__.py  api_client.py  configuration.py  rest.py
kubernetes/test/mock-api/client/swagger_client/api/: __init__.py  customer_api_api.py
kubernetes/test/mock-api/client/swagger_client/models/: __init__.py  access_token.py  consent_id.py  contract_id.py  data_id.py  execution_metrics.py  execution_request_body.py  execution_result.py  function_id.py  metadata.py  operation_id.py  private_execution_request_body.py  private_execution_result.py
kubernetes/test/mock-api/client/test/: test_access_token.py  test_consent_id.py  test_contract_id.py  test_customer_api_api.py  test_data_id.py  test_execution_metrics.py  test_execution_request_body.py  test_execution_result.py  test_function_id.py  test_metadata.py  test_operation_id.py  test_private_execution_request_body.py  test_private_execution_result.py
kubernetes/test/mock-api/scripts/: generate-fastapi-skeleton.sh
kubernetes/test/mock-api/server/: Dockerfile  README.md  setup.py  test-requirements.txt
kubernetes/test/mock-api/server/swagger_server/: __main__.py
kubernetes/test/mock-api/server/swagger_server/controllers/: customer_api_controller.py
kubernetes/test/mock-api/server/swagger_server/models/: __init__.py  access_token.py  consent_id.py  contract_id.py  data_id.py  execution_metrics.py  execution_request_body.py  execution_result.py  function_id.py  metadata.py  operation_id.py  private_execution_request_body.py  private_execution_result.py
kubernetes/test/mock-api/server/swagger_server/swagger/: swagger.yaml
kubernetes/test/mock-api/spec/: openapi_design.json
kubernetes/test/mock-api/swagger_server/: __main__.py
kubernetes/test/mock-api/swagger_server/controllers/: customer_api_controller.py  default_controller.py
kubernetes/test/mock-api/swagger_server/models/: execution_metrics.py  execution_result.py  version_response.py  versions_response.py
kubernetes/test/mock-api/swagger_server/swagger/: swagger.yaml
kubernetes/test/mock-api/swagger_server/test/: test_customer_api_controller.py  test_default_controller.py
kubernetes/test/mock-api/tests/: test_api_default.py  test_customer_api_request_edge_proc.py  test_customer_api_request_privacy_edge_proc.py
kubernetes/test/mock-api/tests/data/: priv_edge_proc_req_def.json
spec/: openapi.yaml
(+345 files in other folders)
