[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ptx-edge-builder"
dynamic = ["version", "readme"]
description = "PTX-Edge Artifact Builder"
authors = [{ name = "Janos Czentye", email = "czentye@tmit.bme.hu" }]
license = { text = "Apache 2.0" }
requires-python = ">=3.13"
keywords = ["PTX", "dataspace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    'httpx[cli]>=0.28.1',
    'httpx-retries~=0.4.0',
    'httpx_auth~=0.23.1',
    'python-benedict[toml]~=0.34',
    'kubernetes~=33.1.0',
    'PyYAML~=6.0.2'
]

[project.urls]
Repository = "https://github.com/Prometheus-X-association/edge-computing"
Homepage = "https://github.com/Prometheus-X-association/edge-computing"
Issues = "https://github.com/Prometheus-X-association/edge-computing/issues"

[project.optional-dependencies]
test = [
    "virtualenv",
    "pytest",
    "pytest-custom_exit_code~=0.3.0",
    "tox"
]

[tool.setuptools.dynamic]
version = { attr = "app.__version__" }
readme = { file = ["README.md"], content-type = 'text/markdown' }

[tool.setuptools.packages.find]
exclude = []

[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "-v",
    "--suppress-no-test-exit-code",
    "--import-mode=importlib"
]