[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ptx-edge-builder"
dynamic = ["version", "readme"]
description = "PTX-Edge Artifact Builder"
authors = [{ name = "Janos Czentye", email = "czentye@tmit.bme.hu" }]
license = { text = "Apache 2.0" }
requires-python = ">=3.13"
keywords = ["PTX", "dataspace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    'python-benedict[toml]~=0.37.0',
    'requests~=2.34.2',
    'requests-toolbelt~=1.0.0',
    'urllib3',
    'certifi',
    'PyYAML~=6.0.3',
    'kubernetes~=34.1.0',
    'pytest~=9.0.3'
]

[project.urls]
Repository = "https://github.com/Prometheus-X-association/edge-computing"
Homepage = "https://github.com/Prometheus-X-association/edge-computing"
Issues = "https://github.com/Prometheus-X-association/edge-computing/issues"

[project.optional-dependencies]
test = [
    "virtualenv",
    "pytest",
    "pytest-custom_exit_code~=0.3.0",
    "tox"
]

[tool.setuptools.dynamic]
version = { attr = "app.__version__" }
readme = { file = ["README.md"], content-type = 'text/markdown' }

[tool.setuptools.packages.find]
exclude = []

[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "-v",
    "--suppress-no-test-exit-code",
    "--import-mode=importlib"
]